--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
 <body>
     <h1>Test</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur veritatis alias expedita consequatur, iste
-        temporibus porro rerum voluptatum nostrum, nulla modi accusamus voluptatibus exercitationem consectetur
-        explicabo, eligendi libero ad vero.</p>
+  
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut nulla quia necessitatibus molestias tempora officiis consequuntur ducimus harum, repellendus sint provident maxime fuga? Voluptatum, voluptatibus obcaecati. Id, eveniet cumque. Provident!</p>
 
 </body>
 
