--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Test</h1>
+    <p>שלום עולם</p>
   
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut nulla quia necessitatibus molestias tempora officiis consequuntur ducimus harum, repellendus sint provident maxime fuga? Voluptatum, voluptatibus obcaecati. Id, eveniet cumque. Provident!</p>
 
